2003-10-17  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added documentation into ZMI tab

   * Moved documentation text on ZMI forms to reduce need to scroll

2003-10-15  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed metadata type for Controller Validators

   * Added validators and UI for validators to python scripts

2003-10-08  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added a missing import to Script.py

   * Fixed the way redirect actions handle items in the query string.  There may
     still be problems with anchors in the redirect -- need to check on this.

2003-10-07  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added more detailed error messages when next action can't be found.
     Hopefully this will make people less mystified when they screw up
     their .metadata files.

2003-09-27  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Bound the state to the global variable 'state' in controller scripts and
     validators.  One less line of code to write!

2003-09-27  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added a forgotten import statement in ControllerPythonScript

   * ControllerValidators don't use actions or validators so the actions tab has
     been removed

   * Fixed the customize function so that it copies actions and validators when
     you customize an FSControllerPageTemplate or an FSControllerPythonScript

2003-09-23  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Renamed classes (ControlledX to ControllerX)

   * Created separate ControllerValidator and FSControllerValidator classes

   * Made new defaults for ControllerValidator and for ControllerPythonScript classes

2003-08-17  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified the validation of validators in FormValidator to allow for
     validators in which a directory path is specified.

2003-08-08  Geoff Davis <geoff@geoffdavis.net> (plonista)
