@@ -14,6 +14,8 @@ class TraverseTo(BaseFormAction):
         for (key, value) in controller_state.kwargs.items():
             REQUEST.set(key, value)
         obj = controller_state.getContext().restrictedTraverse(url)
+        if obj is None:
+            raise ValueError, 'Unable to find %s\n' % str(url)
         return mapply(obj, REQUEST.args, REQUEST,
                                call_object, 1, missing_name, dont_publish_class,
                                REQUEST, bind=1)
